force-app/main/default/objects/Beat_Line__c/Beat_Line__c.object-meta.xml
<CustomObject>
    <label>Beat Line</label>
    <nameField>
        <displayFormat>BTLN-{00}</displayFormat>
        <label>BTLN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>