force-app/main/default/objects/Beat_Line__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beat Lines</relationshipLabel>
    <relationshipName>Beat_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>