force-app/main/default/objects/Beat_Line__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store/Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beat Lines (Accounts)</relationshipLabel>
    <relationshipName>Beat_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>