force-app/main/default/objects/Beat_Line__c/fields/Assigned_Beat_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Beat_User__c</fullName>
    <formula>Beat__r.User__r.FirstName &amp; &apos; &apos;  &amp; Beat__r.User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned - Beat User</label>
    <type>Text</type>
</CustomField>