force-app/main/default/objects/Beat_Line__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <label>Beat</label>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Beat Lines</relationshipLabel>
    <relationshipName>Beat_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>