force-app/main/default/objects/Beat_Line__c/fields/Beat_User__c.field-meta.xml
<CustomField>
    <fullName>Beat_User__c</fullName>
    <formula>Beat__r.User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat User</label>
    <type>Text</type>
</CustomField>