force-app/main/default/objects/Beat_Line__c/fields/Number_of_Visits_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Visits_Required__c</fullName>
    <formula>2 - Accounts__r.Number_of_Meetings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Visits Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>