force-app/main/default/objects/Beat_Line__c/fields/Sub_Mode_of_transport__c.field-meta.xml
<CustomField>
    <fullName>Sub_Mode_of_transport__c</fullName>
    <label>Sub Mode of transport</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mode_of_Transport__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 wheeler</fullName>
            </value>
            <value>
                <fullName>4 wheeler</fullName>
            </value>
            <value>
                <fullName>Public Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>