force-app/main/default/objects/Beat_Line__c/fields/Today_Selection__c.field-meta.xml
<CustomField>
    <fullName>Today_Selection__c</fullName>
    <formula>TEXT(Day_Order__c )  ==  TEXT(Beat__r.Next_Day_Order__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today Selection</label>
    <type>Checkbox</type>
</CustomField>