force-app/main/default/objects/Beat_Line__c/fields/Type_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Visit__c</fullName>
    <label>Type of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Value Added Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>