force-app/main/default/objects/Beat_Line__c/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <label>When?</label>
    <type>DateTime</type>
</CustomField>