force-app/main/default/objects/Beat_Line__c/fields/Where__c.field-meta.xml
<CustomField>
    <fullName>Where__c</fullName>
    <label>Where</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>