force-app/main/default/objects/Beat_Line__c/fields/With__c.field-meta.xml
<CustomField>
    <fullName>With__c</fullName>
    <label>With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
            <value>
                <fullName>Teammate</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
                <isActive>false</isActive>
                <label>Manager</label>
            </value>
            <value>
                <fullName>Team Lead</fullName>
                <isActive>false</isActive>
                <label>Team Lead</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>