force-app/main/default/objects/Beat_Line__c/fields/With_Executive_2__c.field-meta.xml
<CustomField>
    <fullName>With_Executive_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>With Executive #2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Beat_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>